--- a/data_dashboard.html
+++ b/data_dashboard.html
@@ -6,18 +6,13 @@
 	<!-- ================================================== -->
 	<!-- ▼jQuery/D3/DC/Crossfilter/Semantic UIファイル読み込み                  -->
 	<!-- ================================================== -->
-	<script type="text/javascript" src="jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery/jquery.address.js"></script>
-	<script type="text/javascript" src="d3/d3.min.js"></script>
-	<script type="text/javascript" src="crossfilter/crossfilter.js"></script>
-	<script type="text/javascript" src="dc.js/dc.js"></script>
-	<link rel="stylesheet" type="text/css" href="dc.js/dc.css" />
-	<link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
-	<script type="text/javascript" src="semantic/semantic.min.js"></script>
-	<script type="text/javascript" src="UI-Dropdown/dropdown.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="UI-Dropdown/dropdown.min.css">
-	<script type="text/javascript" src="UI-popup/popup.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="UI-popup/popup.min.css">
+	<script type="text/javascript" src="../crossfilter/crossfilter.js"></script>
+	<link rel="stylesheet" type="text/css" href="../Semantic-UI/dist/semantic.min.css">
+	<script type="text/javascript" src="../Semantic-UI/dist/semantic.min.js"></script>
+	<script type="text/javascript" src="../UI-Dropdown/dropdown.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../UI-Dropdown/dropdown.min.css">
+	<script type="text/javascript" src="../UI-Popup/popup.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../UI-Popup/popup.min.css">
 
 </head>
 <body>
