fix conflict issue with d3 and dc

--- a/data_dashboard.html
+++ b/data_dashboard.html
@@ -6,7 +6,11 @@
 	<!-- ================================================== -->
 	<!-- ▼jQuery/D3/DC/Crossfilter/Semantic UIファイル読み込み                  -->
 	<!-- ================================================== -->
+	<script type="text/javascript" src="../jquery-dist/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="../d3.github.com/d3.v3.js"></script>
 	<script type="text/javascript" src="../crossfilter/crossfilter.js"></script>
+	<script type="text/javascript" src="../dc.js/dc.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../dc.js/dc.css"/>
 	<link rel="stylesheet" type="text/css" href="../Semantic-UI/dist/semantic.min.css">
 	<script type="text/javascript" src="../Semantic-UI/dist/semantic.min.js"></script>
 	<script type="text/javascript" src="../UI-Dropdown/dropdown.min.js"></script>
