--- a/datamap.html
+++ b/datamap.html
@@ -81,7 +81,7 @@
 				//magnitude --> radius
 				Object.keys(data[0]).forEach(function (key) {
 					for(var i = 0 ; i<data.length ; i++ ){
-						data[i]["radius"]=data[i]["magnitude"]*10
+						data[i]["radius"]=data[i]["magnitude"]
 					}
 				});
 
